--- a/2_Java/PuebasJS/web/web_dinamica.html
+++ b/2_Java/PuebasJS/web/web_dinamica.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Web dinámica</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            .unaClase {background-color: #777777};
+            .unaClase {background-color: #0000FF};
         </style>
     </head>
     <body>
@@ -15,6 +15,12 @@
             <li class="unaClase">B</li>
             <li class="unaClase">C</li>
         </ol>
+        
+        <input class="botonSumar" type="button" value="Sumar lista"/>
+        <input class="botonDoblar" type="button" value="Doblar lista"/>
+        <input class="botonAnadir" type="button" value="Añadir elemento"/>
+        <input class="botonReiniciar" type="button" value="Reiniciar lista"/>
+        
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/ejemploDOM.js"></script>
     </body>
