--- a/2_Java/PuebasJS/web/web_dinamica.html
+++ b/2_Java/PuebasJS/web/web_dinamica.html
@@ -48,6 +48,7 @@
         <br/>
         
         <input class="botonOcultar" type="button" value="Ocultar Tabla"/>
+        <input class="botonMostrar" type="button" value="Mostrar tabla"/>
 
         <script src="js/jquery-3.3.1.js"></script>
         <script src="js/ejemploDOM.js"></script>
