--- a/2_Java/EjemplosServlet/web/index.html
+++ b/2_Java/EjemplosServlet/web/index.html
@@ -11,5 +11,6 @@
         <a href="param">Servlet param (formulario)</a><br>
         <a href="registro.html">Formulario de registro</a><br>
         <a href="login.html">Formulario de login</a><br>
+        <a href="cambiarDatos.html">Cambiar datos</a><br>
     </body>
 </html>
