Cambiar Puerto de 8080 al 8084 en eliminar.html

--- a/2_Java/EjemplosServlet/web/eliminar.html
+++ b/2_Java/EjemplosServlet/web/eliminar.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1>Eliminar USUARIO por EMAIL</h1>
-        <form name="form1" method="post" action="http://localhost:8080/JServlet/eliminar">
+        <form name="form1" method="post" action="http://localhost:8084/EjemplosServlet/eliminar">
             <table border="1">
                 <tr><td>E-mail:</td><td>
                         <input type="email" name="email" id="email" size="100" required="required" value=""/></td></tr>
