--- a/2_Java/EjemplosServlet/web/index.html
+++ b/2_Java/EjemplosServlet/web/index.html
@@ -12,5 +12,6 @@
         <a href="registro.html">Formulario de registro</a><br>
         <a href="login.html">Formulario de login</a><br>
         <a href="cambiarDatos.html">Cambiar datos</a><br>
+        <a href="eliminar.html">Elimiar datos</a><br>
     </body>
 </html>
